1110-1復元ポイント

--- a/solution/index.html
+++ b/solution/index.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 Copyright 2024 Google LLC
 
 Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,13 +14,13 @@ See the License for the specific language governing permissions and
 limitations under the License.
  -->
 <!doctype html>
-<html lang="en">
+<html lang="ja-JP">
   <head>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Google Maps with React Codelab</title>
+    <title>佐渡で食えっちゃ with React Codelab</title>
     <meta
       name="description"
       content="Google Maps with React Codelab" />
@@ -38,5 +38,10 @@ limitations under the License.
   <body>
     <div id="app"></div>
     <script type="module" src="./src/app.tsx"></script>
+    <footer>
+      <p>
+        <small>&copy; 2024</small><!--最初の発行年+著作者-->
+      </p>
+    </footer>
   </body>
 </html>
