復元ポイント

--- a/solution/index.html
+++ b/solution/index.html
@@ -13,30 +13,41 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
  -->
-<!doctype html>
+<!DOCTYPE html>
+<!--文書型宣言-->
 <html lang="ja-JP">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>佐渡で食えっちゃ with React Codelab</title>
-    <meta
-      name="description"
-      content="Google Maps with React Codelab" />
-    <style>
-      body {
-        margin: 0;
-        font-family: sans-serif;
-      }
-      #app {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="./src/app.tsx"></script>
-  </body>
+	<!--言語設定-->
+
+	<head>
+		<meta charset="UTF-8" />
+		<!--文字コード-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!--レスポンシブ-->
+		<meta name="robots" content="ALL" />
+		<!--検索クローラー設定-->
+		<meta name="description" content="" />
+		<!--サイト説明-->
+		<title></title>
+		<!--ページタイトル-->
+		<script src="https://"></script>
+		<!--外部.js参照元-->
+		<link rel="stylesheet" href="./" />
+		<!--.css参照元-->
+		<style>
+			body {
+				margin: 0;
+				font-family: sans-serif;
+			}
+
+			#app {
+				width: 100vw;
+				height: 100vh;
+			}
+		</style>
+	</head>
+
+	<body>
+		<div id="app"></div>
+		<script type="module" src="./src/app.tsx"></script>
+	</body>
 </html>
