--- a/solution/index.html
+++ b/solution/index.html
@@ -27,7 +27,7 @@ limitations under the License.
 		<!--検索クローラー設定-->
 		<meta name="description" content="" />
 		<!--サイト説明-->
-		<title></title>
+		<title>佐渡で食えっちゃ<img src="./logo/row1.png" alt="佐渡で食えっちゃ ロゴ" id="logo"></title>
 		<!--ページタイトル-->
 		<script src="https://"></script>
 		<!--外部.js参照元-->
