復元ポイント

--- a/solution/index.html
+++ b/solution/index.html
@@ -13,26 +13,17 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
  -->
-<!DOCTYPE html>
-<!--文書型宣言-->
-<html lang="ja-JP">
-	<!--言語設定-->
+<!doctype html><!--文書型宣言-->
+<html lang="ja-JP"><!--言語設定-->
 
 	<head>
-		<meta charset="UTF-8" />
-		<!--文字コード-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!--レスポンシブ-->
-		<meta name="robots" content="ALL" />
-		<!--検索クローラー設定-->
-		<meta name="description" content="" />
-		<!--サイト説明-->
-		<title>佐渡で食えっちゃ<img src="./logo/row1.png" alt="佐渡で食えっちゃ ロゴ" id="logo"></title>
-		<!--ページタイトル-->
-		<script src="https://"></script>
-		<!--外部.js参照元-->
-		<link rel="stylesheet" href="./" />
-		<!--.css参照元-->
+		<meta charset="UTF-8" /><!--文字コード-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" /><!--レスポンシブ-->
+		<meta name="robots" content="ALL" /><!--検索クローラー設定-->
+		<meta name="description" content="" /><!--サイト説明-->
+		<title img src="./row2.png" alt="佐渡で食えっちゃ ロゴ" id="logo"></title><!--ページタイトル-->
+		<script src="https://"></script><!--外部.js参照元-->
+		<link rel="stylesheet" href="./" /><!--.css参照元-->
 		<style>
 			body {
 				margin: 0;
