--- a/solution/index.html
+++ b/solution/index.html
@@ -5,38 +5,34 @@ Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
-    https://www.apache.org/licenses/LICENSE-2.0
+https://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
- -->
+-->
 <!doctype html><!--文書型宣言-->
 <html lang="ja-JP"><!--言語設定-->
-
 	<head>
 		<meta charset="UTF-8" /><!--文字コード-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /><!--レスポンシブ-->
 		<meta name="robots" content="ALL" /><!--検索クローラー設定-->
-		<meta name="description" content="" /><!--サイト説明-->
-		<title img src="./row2.png" alt="佐渡で食えっちゃ ロゴ" id="logo"></title><!--ページタイトル-->
-		<script src="https://"></script><!--外部.js参照元-->
-		<link rel="stylesheet" href="./" /><!--.css参照元-->
+		<meta name="description" content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な旅をお手伝いします。" /><!--サイト説明-->
+		<link rel="icon" href="./row2.png" type="image/png">
+		<title>佐渡で食えっちゃ</title><!--ページタイトル-->
 		<style>
 			body {
 				margin: 0;
 				font-family: sans-serif;
 			}
-
 			#app {
 				width: 100vw;
 				height: 100vh;
 			}
 		</style>
 	</head>
-
 	<body>
 		<div id="app"></div>
 		<script type="module" src="./src/app.tsx"></script>
