復元ポイント

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="./solution/src/app.tsx"></script>
+		<script type="module" src="./src/app.tsx"></script>
 	</body>
 </html>
