復元ポイント

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="robots" content="ALL" /><!--検索クローラー設定-->
 		<meta name="description" content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な旅をお手伝いします。" /><!--サイト説明-->
 		<link rel="icon" href="./row2.png" type="image/png">
-		<title>佐渡で食えっちゃ</title><!--ページタイトル-->
+		<title>　佐渡で食えっちゃ　With_React</title><!--ページタイトル-->
 		<style>
 			body {
 				margin: 0;
