構文エラー

--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
-<!doctype html><!--文書型宣言-->
-<html lang="ja-JP"><!--言語設定-->
-	<head>
-		<meta charset="UTF-8" /><!--文字コード-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" /><!--レスポンシブ-->
-		<meta name="robots" content="ALL" /><!--検索クローラー設定-->
-		<meta name="description" content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な旅をお手伝いします。" /><!--サイト説明-->
-		<link rel="icon" href="./row2.png" type="image/png">
-		<title>　佐渡で食えっちゃ　With_React</title><!--ページタイトル-->
-		<style>
-			body {
-				margin: 0;
-				font-family: sans-serif;
-			}
-			#app {
-				width: 100vw;
-				height: 100vh;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="app"></div>
-		<script type="module" src="./src/app.tsx"></script>
-	</body>
+<!DOCTYPE html><!--文書型宣言-->
+<html lang="ja-JP">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index,follow"> <!-- クローラーにインデックス許可とリンクフォローを指示 -->
+    <meta name="description" content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。">
+    <link rel="icon" href="./row2.png" type="image/png">
+    <title>佐渡で食えっちゃ</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: sans-serif;
+        }
+        #app {
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
+</head>
+<body>
+    <div id="app"></div>
+    <script type="module" src="./src/app.tsx"></script>
+</body>
 </html>
