--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ja-JP">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,11 +8,11 @@
       name="description"
       content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
     />
-    <link rel="icon" href="./src/row2.png" type="image/png" />
+    <link rel="icon" href="/src/row2.png" type="image/png" />
     <title>佐渡で食えっちゃ</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/app.tsx"></script>
+    <script type="module" src="/src/app.tsx"></script>
   </body>
 </html>
