--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       name="description"
       content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
     />
-    <link rel="icon" href="%BASE_URL%src/row2.png" type="image/png" />
+    <link rel="icon" href="src/row2.png" type="image/png" />
     <title>佐渡で食えっちゃ</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="%BASE_URL%src/app.tsx"></script>
+    <script type="module" src="src/app.tsx"></script>
   </body>
 </html>
