マップコンポーネントのスタイルを追加し、アプリ全体のスタイルを整備しました。LoadingFallbackとErrorBoundaryのスタイルも追加しました。設定の検証とデータフェッチのロジックを改善しました。

--- a/index.html
+++ b/index.html
@@ -9,9 +9,24 @@
     />
     <link rel="icon" href="./src/row2.png" type="image/png" />
     <title>佐 渡 で 食 え っ ち ゃ</title>
+    <style>
+      /* 全体のスタイルを設定 */
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      /* アプリケーションのコンテナを画面いっぱいに設定 */
+      #app {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/app.tsx"></script>
+    <script type="module" src="./src/App.tsx"></script>
   </body>
 </html>
