--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
     />
-    <link rel="icon" href="./src/row2.png" type="image/png" />
+    <link rel="icon" href="./src/assets/images/row2.png" type="image/png" />
     <title>佐渡で食えっちゃ by INTX</title>
     <style>
       /* 全体のスタイルを設定 */
