--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
     />
     <link rel="icon" href="./src/assets/images/row2.png" type="image/png" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>佐渡で食えっちゃ by INTX</title>
     <style>
       /* 全体のスタイルを設定 */
@@ -16,6 +17,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
+        font-family: 'Roboto', sans-serif; /* フォントを統一 */
       }
 
       /* アプリケーションのコンテナを画面いっぱいに設定 */
