--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- ページのキーワード -->
     <meta
       name="keywords"
-      content="佐渡, 飲食店, 駐車場, 公共トイレ, 旅行, 観光"
+      content="佐渡, 飲食店, 駐車場, 公共トイレ, 旅行, 観光,佐渡で食えっちゃ,INTX"
     />
     <!-- ファビコンの設定 -->
     <link rel="icon" href="./src/utils/images/row2.png" type="image/png" />
