.gitignoreと.vscode/launch.jsonにコメントを追加し、.npmrcファイルに説明を追加しました。また、index.htmlにアプリケーションのルート要素とエントリーポイントのコメントを追加し、App.cssにレスポンシブデザインのメディアクエリを追加しました。tsconfig.jsonの設定にコメントを追加し、devDependenciesのバージョンを更新しました。

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     </style>
   </head>
   <body>
+    <!-- アプリケーションのルート要素 -->
     <div id="app"></div>
+    <!-- アプリケーションのエントリーポイント -->
     <script type="module" src="./src/App.tsx"></script>
   </body>
 </html>
