ページタイトルを「佐渡で食えっちゃ by INTX test」に変更しました

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Google FontsのRobotoフォントを読み込み -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- ページのタイトル -->
-    <title>佐渡で食えっちゃ by INTX</title>
+    <title>佐渡で食えっちゃ by INTX test</title>
     <!-- アプリケーションのスタイルシートを読み込み -->
     <link rel="stylesheet" href="./src/App.css">
     <style>
