--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <!-- 文字エンコーディングをUTF-8に設定 -->
@@ -18,17 +18,21 @@
     <!-- ファビコンの設定 -->
     <link rel="icon" href="./src/utils/images/row2.png" type="image/png" />
     <!-- Google Fontsへの接続を事前に確立 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Google FontsのRobotoフォントを読み込み -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- ページのタイトル -->
-    <title>佐渡で食えっちゃ by INTX test</title>
+    <title>佐渡で食えっちゃ by INTX</title>
     <!-- アプリケーションのスタイルシートを読み込み -->
-    <link rel="stylesheet" href="./src/App.css">
+    <link rel="stylesheet" href="./src/App.css" />
     <style>
       /* 全体のスタイル設定 */
-      html, body {
+      html,
+      body {
         margin: 0;
         padding: 0;
         width: 100%;
@@ -40,6 +44,12 @@
       #app {
         width: 100%;
         height: 100%;
+      }
+
+      /* ベンダープレフィックスの順序を修正 */
+      .example {
+        -ms-transform: rotate(20deg); /* IE 9 */
+        transform: rotate(20deg); /* Standard syntax */
       }
     </style>
   </head>
