--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
     />
     <title>佐渡で食えっちゃ by INTX</title>
     <link rel="stylesheet" href="./src/App.css" />
+    <style>
+      html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #app {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
