--- a/index.html
+++ b/index.html
@@ -20,18 +20,7 @@
     />
     <title>佐渡で食えっちゃ by INTX</title>
     <link rel="stylesheet" href="./src/App.css" />
-    <style>
-      html, body {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #app {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body>
     <div id="app"></div>
