CSSファイルの末尾に改行を追加し、コードの整形を改善しました。また、いくつかのコンポーネントのコードを簡潔にしました。

--- a/index.html
+++ b/index.html
@@ -11,20 +11,14 @@
       content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
     />
     <!-- ページのキーワードを設定、SEO対策 -->
-    <meta
-      name="keywords"
-      content="佐渡, 飲食店, 駐車場, 公共トイレ, 旅行, 観光,佐渡で食えっちゃ,INTX"
-    />
+    <meta name="keywords" content="佐渡, 飲食店, 駐車場, 公共トイレ, 旅行, 観光,佐渡で食えっちゃ,INTX" />
     <!-- ファビコンの設定 -->
     <link rel="icon" href="./src/utils/images/row2.png" type="image/png" />
     <!-- Google Fontsへの事前接続を設定、パフォーマンス向上 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Google FontsのRobotoフォントを読み込み -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <!-- ページのタイトルを設定 -->
     <title>佐渡で食えっちゃ by INTX</title>
     <!-- アプリケーションのメインCSSファイルを読み込み -->
