--- a/index.html
+++ b/index.html
@@ -1,35 +1,49 @@
 <!doctype html>
 <html lang="ja">
   <head>
-    <!-- 文字エンコーディングをUTF-8に設定 -->
     <meta charset="UTF-8" />
-    <!-- ビューポートの設定、レスポンシブデザイン対応 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- ページの説明を設定、SEO対策 -->
     <meta
       name="description"
       content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
     />
-    <!-- ページのキーワードを設定、SEO対策 -->
-    <meta name="keywords" content="佐渡, 飲食店, 駐車場, 公共トイレ, 旅行, 観光,佐渡で食えっちゃ,INTX" />
-    <!-- ファビコンの設定 -->
-    <link rel="icon" href="./src/utils/images/row2.png" type="image/png" />
-    <!-- Google Fontsへの事前接続を設定、パフォーマンス向上 -->
+    <meta name="keywords" content="佐渡,飲食店,駐車場,公共トイレ,旅行,観光,佐渡で食えっちゃ,INTX" />
+    <meta name="theme-color" content="#4a6da7" />
+
+    <!-- Open Graph / SNS 共有用メタタグ -->
+    <meta property="og:title" content="佐渡で食えっちゃ by INTX" />
+    <meta
+      property="og:description"
+      content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="佐渡で食えっちゃ" />
+    <meta property="og:image" content="./src/utils/images/ogp.png" />
+    <meta property="og:locale" content="ja_JP" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- ファビコンとアイコン設定 -->
+    <link rel="icon" href="./favicon.ico" sizes="any" />
+    <link rel="icon" href="./icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+    <link rel="manifest" href="./manifest.json" />
+
+    <!-- リソース事前読み込み設定 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- Google FontsのRobotoフォントを読み込み -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-    <!-- ページのタイトルを設定 -->
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      as="style"
+    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
+    <link rel="stylesheet" href="./index.css" />
+
     <title>佐渡で食えっちゃ by INTX</title>
-    <!-- アプリケーションのメインCSSファイルを読み込み -->
-    <link rel="stylesheet" href="./src/App.css" />
-    <!-- インデックスページ専用のCSSファイルを読み込み -->
-    <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body>
-    <!-- Reactアプリケーションのルート要素 -->
     <div id="app"></div>
-    <!-- Reactアプリケーションのエントリーポイントを設定 -->
+    <noscript>このアプリケーションを利用するにはJavaScriptを有効にしてください。</noscript>
     <script type="module" src="./src/App.tsx"></script>
   </body>
 </html>
