CSSモジュールのインポート名を修正し、不要なCSSファイルを削除しました。また、新しいマーカーのスタイルを追加しました。

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <meta name="twitter:card" content="summary_large_image" />
 
     <!-- ファビコンとアイコン設定 -->
-    <link rel="icon" href="./favicon.ico" sizes="any" />
-    <link rel="icon" href="./icon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+    <link rel="icon" href="./src/utils/images/row2.png" sizes="any" />
+    <link rel="icon" href="./src/utils/images/row2.png" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./src/utils/images/row2.png" />
     <link rel="manifest" href="./manifest.json" />
 
     <!-- リソース事前読み込み設定 -->
