--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。" />
+    <meta
+      name="description"
+      content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
+    />
     <meta name="keywords" content="佐渡,飲食店,駐車場,公共トイレ,旅行,観光,佐渡で食えっちゃ,INTX" />
     <meta name="theme-color" content="#4a6da7" />
     <meta property="og:title" content="佐渡で食えっちゃ by INTX" />
-    <meta property="og:description" content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。" />
+    <meta
+      property="og:description"
+      content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="佐渡で食えっちゃ" />
     <meta property="og:image" content="./src/utils/images/ogp.png" />
@@ -22,7 +28,11 @@
     <link rel="manifest" href="./manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" as="style" />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      as="style"
+    />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
     <link rel="stylesheet" href="./index.css" />
   </head>
