--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   <body>
     <div id="app"></div>
     <noscript>このアプリケーションを利用するにはJavaScriptを有効にしてください。</noscript>
-    <script type="module" src="./src/App.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
