--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
     <meta
       name="description"
       content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
@@ -19,12 +19,36 @@
     <meta property="og:image" content="./src/assets/images/logos/ogp.png" />
     <meta property="og:locale" content="ja_JP" />
     <meta name="twitter:card" content="summary_large_image" />
-
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://yourdomain.com/kueccha/" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' https://maps.googleapis.com; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://*.googleapis.com https://*.gstatic.com data:; connect-src 'self' https://*.googleapis.com;"
+    />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "佐渡で食えっちゃ by INTX",
+        "description": "佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。",
+        "applicationCategory": "TravelApplication",
+        "offers": {
+          "@type": "Offer",
+          "price": "0"
+        }
+      }
+    </script>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#4a6da7" />
+    <meta name="apple-mobile-web-app-title" content="佐渡で食えっちゃ" />
     <title>佐渡で食えっちゃ by INTX</title>
-
-    <link rel="icon" href="./src/assets/images/logos/row2.png" sizes="any" />
-    <link rel="icon" href="./src/assets/images/logos/row2.png" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./src/assets/images/logos/row2.png" />
+    <link rel="preload" href="./src/assets/images/logos/row2.png" as="image" type="image/png" />
+    <link rel="preload" href="./index.css" as="style" />
+    <link rel="preload" href="./src/index.tsx" as="script" type="module" />
+    <link rel="icon" href="./src/assets/images/logos/favicon.ico" sizes="any" />
+    <link rel="icon" href="./src/assets/images/logos/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./src/assets/images/logos/apple-touch-icon.png" />
     <link rel="manifest" href="./manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,6 +58,15 @@
       as="style"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
+    </noscript>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
