--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
   <body>
     <div id="app"></div>
     <noscript>このアプリケーションを利用するにはJavaScriptを有効にしてください。</noscript>
-    <script type="module" src="./src/index.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
