feat: Optimize application for GitHub Pages deployment
- Refactor App component to improve error handling and loading states.
- Remove FeedbackForm component as it is no longer needed.
- Update main entry point to streamline environment variable usage.
- Enhance array utility functions with additional error handling and examples.
- Simplify environment variable management and ensure type safety.
- Update TypeScript configuration for stricter type checks.
- Modify Vite configuration to improve build performance and error logging.

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="佐渡で食えっちゃ" />
-    <meta property="og:image" content="/images/logos/ogp.png" />
+    <meta property="og:image" content="/kueccha/images/logos/ogp.png" />
     <meta property="og:locale" content="ja_JP" />
-    <meta property="og:url" content="https://nakanaka07.github.io/sadodekueccha/" />
+    <meta property="og:url" content="https://nakanaka07.github.io/kueccha/" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <!-- インデックス設定とカノニカルURL -->
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://nakanaka07.github.io/sadodekueccha/" />
+    <link rel="canonical" href="https://nakanaka07.github.io/kueccha/" />
 
     <!-- セキュリティ設定 -->
     <meta
@@ -55,10 +55,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#4a6da7" />
     <meta name="apple-mobile-web-app-title" content="佐渡で食えっちゃ" />
-    <link rel="icon" href="/images/favicon.ico" sizes="any" />
-    <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/kueccha/images/favicon.ico" sizes="any" />
+    <link rel="icon" href="/kueccha/images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/kueccha/images/apple-touch-icon.png" />
+    <link rel="manifest" href="/kueccha/manifest.json" />
 
     <!-- リソース最適化：重要なリソースを先読み -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -66,11 +66,11 @@
     <link rel="preconnect" href="https://maps.googleapis.com" />
 
     <!-- クリティカルリソースのプリロード -->
-    <link rel="preload" href="/images/logos/row2.png" as="image" type="image/png" />
-    <link rel="preload" href="/index.css" as="style" />
+    <link rel="preload" href="/kueccha/images/logos/row2.png" as="image" type="image/png" />
+    <link rel="preload" href="/kueccha/index.css" as="style" />
 
     <!-- スタイルシート -->
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/kueccha/index.css" />
 
     <!-- フォント読み込みの最適化 -->
     <link
