--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 
     <!-- PWA対応の強化 -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#4a6da7" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="佐渡で食えっちゃ" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="佐渡で食えっちゃ" />
 
-    <!-- ベースパス設定 - 環境に応じて自動的に置換される -->
+    <!-- ベースパス設定 - GitHub Pages向け最適化 -->
     <base href="__BASE_PATH__" />
 
-    <!-- OGP設定 -->
+    <!-- OGP設定 - GitHub Pages完全対応 -->
     <meta property="og:title" content="佐渡で食えっちゃ by INTX" />
     <meta
       property="og:description"
@@ -36,27 +37,27 @@
     <meta property="og:url" content="https://nakanaka07.github.io/kueccha/" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <!-- インデックス設定とカノニカルURL -->
+    <!-- インデックス設定とカノニカルURL - GitHub Pages用 -->
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://nakanaka07.github.io/kueccha/" />
 
-    <!-- セキュリティ設定 - GitHub Pages対応 -->
+    <!-- セキュリティ設定 - GitHub Pages対応強化 -->
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self' 'unsafe-inline' https://maps.googleapis.com https://api.emailjs.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://*.googleapis.com https://*.gstatic.com data:; connect-src 'self' https://*.googleapis.com https://api.emailjs.com; worker-src 'self'; manifest-src 'self'; object-src 'none';"
     />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
 
-    <!-- アイコン設定 - PWA Assets Generator対応 -->
+    <!-- アイコン設定 - PWA Assets Generator完全対応 -->
     <link rel="icon" href="__BASE_PATH__favicon.ico" sizes="any" />
     <link rel="icon" href="__BASE_PATH__favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="__BASE_PATH__apple-touch-icon.png" />
     <link rel="mask-icon" href="__BASE_PATH__mask-icon.svg" color="#4a6da7" />
 
-    <!-- マニフェスト - PWA対応 -->
+    <!-- マニフェスト - PWA対応強化 -->
     <link rel="manifest" href="__BASE_PATH__manifest.json" />
 
-    <!-- 構造化データ -->
+    <!-- 構造化データ - 検索エンジン最適化 -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -64,27 +65,35 @@
         "name": "佐渡で食えっちゃ by INTX",
         "description": "佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。",
         "applicationCategory": "TravelApplication",
+        "operatingSystem": "All",
         "offers": {
           "@type": "Offer",
-          "price": "0"
+          "price": "0",
+          "priceCurrency": "JPY"
+        },
+        "author": {
+          "@type": "Organization",
+          "name": "INTX"
         }
       }
     </script>
 
-    <!-- リソース最適化：重要なリソースを先読み -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- リソース最適化：重要なリソースを先読み - モバイル性能向上 -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://maps.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://maps.googleapis.com" />
+    <link rel="preconnect" href="https://maps.googleapis.com" crossorigin />
 
-    <!-- クリティカルリソースのプリロード -->
-    <link rel="preload" href="__BASE_PATH__images/logos/row2.png" as="image" type="image/png" />
+    <!-- クリティカルリソースのプリロード - 初期表示最適化 -->
+    <link rel="preload" href="__BASE_PATH__images/logos/row2.png" as="image" type="image/png" fetchpriority="high" />
     <link rel="preload" href="__BASE_PATH__index.css" as="style" />
-    <link rel="preload" href="__BASE_PATH__assets/react-vendor-*.js" as="script" crossorigin />
+    <link rel="preload" href="__BASE_PATH__assets/js/react-vendor-*.js" as="script" crossorigin />
 
     <!-- スタイルシート -->
     <link rel="stylesheet" href="__BASE_PATH__index.css" />
 
-    <!-- フォント読み込みの最適化 -->
+    <!-- フォント読み込みの最適化 - レンダリングブロック防止 -->
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
@@ -105,7 +114,11 @@
   </head>
   <body>
     <div id="app"></div>
-    <noscript>このアプリケーションを利用するにはJavaScriptを有効にしてください。</noscript>
+    <noscript>
+      <div style="padding: 20px; text-align: center;">
+        このアプリケーションを利用するにはJavaScriptを有効にしてください。
+      </div>
+    </noscript>
 
     <!-- インライン初期化スクリプト - PWA初期化の最適化 -->
     <script>
@@ -115,8 +128,18 @@
         APP_VERSION: '__APP_VERSION__',
         BUILD_TIME: '__BUILD_TIME__',
       };
+      
+      // サービスワーカー登録
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('__BASE_PATH__service-worker.js').catch(error => {
+            console.error('サービスワーカー登録エラー:', error);
+          });
+        });
+      }
     </script>
 
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- エントリーポイント - GitHub Pages用相対パス最適化 -->
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
