--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    
+
     <!-- セキュリティ強化: Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://maps.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.gstatic.com;" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' https://maps.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.gstatic.com;"
+    />
 
     <!-- クロスブラウザPWA対応 -->
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
@@ -31,7 +34,10 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nakanaka07.github.io/sadodekueccha/" />
-    <meta property="og:image" content="<%= import.meta.env.VITE_BASE_URL || '' %>apple-touch-icon.png" />
+    <meta
+      property="og:image"
+      content="<%= import.meta.env.VITE_BASE_URL || '' %>apple-touch-icon.png"
+    />
     <meta property="og:site_name" content="佐渡で食えっちゃ" />
     <meta property="og:locale" content="ja_JP" />
 
@@ -42,7 +48,10 @@
       name="twitter:description"
       content="佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。"
     />
-    <meta name="twitter:image" content="<%= import.meta.env.VITE_BASE_URL || '' %>apple-touch-icon.png" />
+    <meta
+      name="twitter:image"
+      content="<%= import.meta.env.VITE_BASE_URL || '' %>apple-touch-icon.png"
+    />
 
     <!-- プリコネクトとプリロード設定 - Google Maps統合ガイドラインに従い最適化 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,7 +62,10 @@
     <link rel="dns-prefetch" href="https://maps.gstatic.com" />
 
     <!-- Google Fontsの明示的な読み込み - 実際に使用するフォントを指定 -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- PWA設定 - 既存ファイルのみ参照するように修正 -->
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
@@ -71,7 +83,14 @@
         margin: 0;
         padding: 0;
         font-family:
-          'Noto Sans JP', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+          'Noto Sans JP',
+          -apple-system,
+          BlinkMacSystemFont,
+          'Segoe UI',
+          Roboto,
+          'Helvetica Neue',
+          Arial,
+          sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
@@ -98,8 +117,10 @@
     <script type="module" src="/src/main.tsx"></script>
     <noscript>
       <div class="noscript-message">
-        <p>このアプリケーションを利用するには、JavaScriptを有効にしてください。<br>
-        佐渡島内の飲食店、駐車場、公共トイレの位置情報サービスをご利用いただけます。</p>
+        <p>
+          このアプリケーションを利用するには、JavaScriptを有効にしてください。<br />
+          佐渡島内の飲食店、駐車場、公共トイレの位置情報サービスをご利用いただけます。
+        </p>
       </div>
     </noscript>
   </body>
