feat: Implement custom hooks for environment validation, logger configuration, and network state management
- Added `useEnvValidator` hook for validating environment variables with detailed error handling and logging.
- Introduced `useLoggerConfig` hook to manage logger settings based on environment variables.
- Created `useNetworkState` hook to monitor network connectivity and provide real-time updates on online/offline status.

refactor: Enhance POI store with Zustand for state management

- Developed `poiStore` using Zustand for managing Point of Interest (POI) data with actions for selection, loading, and error handling.
- Added optimized selectors for accessing POI data and loading states.

chore: Add TypeScript definitions for Google Maps marker clustering and POI extensions

- Defined types for Google Maps marker clustering functionality to enhance type safety and developer experience.
- Extended PointOfInterest type with additional properties for better marker customization.

fix: Improve logging utility functions for performance measurement

- Implemented `measurePerformance` and `measureSyncPerformance` functions for logging execution time of asynchronous and synchronous operations.
- Enhanced logging context with structured information for better debugging and monitoring.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- セキュリティ強化: Content Security Policy (Google Maps対応) -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' https://maps.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.gstatic.com; worker-src 'self' blob:;"
+      content="default-src 'self'; script-src 'self' 'unsafe-eval' https://maps.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com; connect-src 'self' https://*.googleapis.com https://*.gstatic.com; worker-src 'self' blob:;"
     />
 
     <!-- クロスブラウザPWA対応 -->
